Fixed all ugly extra white space from top and bottom

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,7 +1,21 @@
 /*Edit Icon Button*/
 
 body {
-    background-color: #fafbfe;
+    background-color: #F7F7F7;
+}
+
+html,body { height:100%; }
+
+.main_container{margin-top: -20px}
+
+.right_col{height:100%;}
+
+.left_col{margin-bottom:-50px;}
+
+
+
+h1 {
+    color: #000;
 }
 
 .editIcon {
